<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:content=".Statistics">

    <include layout="@layout/activity_basic" />

    <TextView
        android:id="@+id/total_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TOTAL TIME"
        android:layout_marginTop="100dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/total_time_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        tools:text="-"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/failed_sessions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="FAILED SESSIONS"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/failed_sessions_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        tools:text="-"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp" />

</RelativeLayout>