...
        tools:layout_conversion_absoluteHeight="320dp"
        tools:layout_conversion_absoluteWidth="320dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="146dp" />

    <ToggleButton
        android:id="@+id/timer_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textOff="START"
...
